--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -6,13 +6,13 @@
     <string name="action_create">Nova nota</string>
     <string name="action_settings">Axustes</string>
     <string name="action_create_save">Gardar</string>
-    <string name="action_create_cancel">Cancelar</string>
-    <string name="action_edit_editing">Editar</string>
+    <string name="simple_cancel">Cancelar</string>
+    <string name="simple_edit">Editar</string>
     <string name="action_edit_save">Gardar</string>
     <string name="action_edit_saving">Gardando &#8230;</string>
     <string name="action_edit_saved">Gardado</string>
     <string name="action_edit_cancel">Cancelar</string>
-    <string name="action_about">Acerca de</string>
+    <string name="simple_about">Acerca de</string>
     <string name="action_select_note">Seleccionar nota</string>
     <string name="action_note_deleted">A nota foi eliminada</string>
     <string name="action_note_restored">A nota foi restaurada</string>
