--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -7,13 +7,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_create_save">Save</string>
-    <string name="action_create_cancel">Cancel</string>
-    <string name="action_edit_editing">Edit</string>
+    <string name="simple_cancel">Cancel</string>
+    <string name="simple_edit">Edit</string>
     <string name="action_edit_save">Save</string>
     <string name="action_edit_saving">Saving &#8230;</string>
     <string name="action_edit_saved">Saved</string>
     <string name="action_edit_cancel">Cancel</string>
-    <string name="action_about">About</string>
+    <string name="simple_about">About</string>
     <string name="action_select_note">Select note</string>
     <string name="action_note_deleted">Note deleted</string>
     <string name="action_note_restored">Note restored</string>
