--- a/app/src/main/res/values-nb-rNO/strings.xml
+++ b/app/src/main/res/values-nb-rNO/strings.xml
@@ -9,13 +9,13 @@
     <string name="action_settings">Innstillinger</string>
     <string name="action_search">Søk</string>
     <string name="action_create_save">Lagre</string>
-    <string name="action_create_cancel">Avbryt</string>
-    <string name="action_edit_editing">Rediger</string>
+    <string name="simple_cancel">Avbryt</string>
+    <string name="simple_edit">Rediger</string>
     <string name="action_edit_save">Lagre</string>
     <string name="action_edit_saving">Lagrer &#8230;</string>
     <string name="action_edit_saved">Lagret</string>
     <string name="action_edit_cancel">Avbryt</string>
-    <string name="action_about">Om</string>
+    <string name="simple_about">Om</string>
     <string name="action_select_note">Velg notat</string>
     <string name="action_note_deleted">Notat slettet</string>
     <string name="action_note_restored">Notat gjenopprettet</string>
