--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -9,13 +9,13 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Hľadať</string>
     <string name="action_create_save">Uložiť</string>
-    <string name="action_create_cancel">Zrušiť</string>
-    <string name="action_edit_editing">Upraviť</string>
+    <string name="simple_cancel">Zrušiť</string>
+    <string name="simple_edit">Upraviť</string>
     <string name="action_edit_save">Uložiť</string>
     <string name="action_edit_saving">Ukladám &#8230;</string>
     <string name="action_edit_saved">Uložené</string>
     <string name="action_edit_cancel">Zrušiť</string>
-    <string name="action_about">O</string>
+    <string name="simple_about">O</string>
     <string name="action_select_note">Vybrať poznámku</string>
     <string name="action_note_deleted">Poznámka vymazaná</string>
     <string name="action_note_restored">Poznámka obnovená</string>
