--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -9,13 +9,13 @@
     <string name="action_settings">Ayarlar</string>
     <string name="action_search">Arama</string>
     <string name="action_create_save">Kaydet</string>
-    <string name="action_create_cancel">İptal</string>
-    <string name="action_edit_editing">Düzenle</string>
+    <string name="simple_cancel">İptal</string>
+    <string name="simple_edit">Düzenle</string>
     <string name="action_edit_save">Kaydet</string>
     <string name="action_edit_saving">Kaydediliyor &#8230;</string>
     <string name="action_edit_saved">Kaydedildi</string>
     <string name="action_edit_cancel">İptal</string>
-    <string name="action_about">Hakkında</string>
+    <string name="simple_about">Hakkında</string>
     <string name="action_select_note">Not seçin</string>
     <string name="action_note_deleted">Not silindi</string>
     <string name="action_note_restored">Not geri yüklendi</string>
