--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -43,7 +43,7 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Account Settings</string>
+    <string name="settings_server_settings">Account</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows whether the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: \"http\" is unsafe. Please use \"https\".</string>
@@ -56,7 +56,7 @@
     <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_notification_title">\"Create note\" as notification</string>
     <string name="settings_notification">Enable to show a persistent notification for quickly creating new notes.</string>
-    <string name="settings_cert_category">Certificates</string>
+    <string name="settings_cert_category">Manage certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
     <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
