--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,8 +39,7 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Account Settings</string>
-    <string name="settings_server">Server</string>
+    <string name="settings_server_settings">Account</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows whether the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: "http" is unsafe. Please use "https".</string>
@@ -50,10 +49,9 @@
     <string name="settings_password_check_description">Displays whether the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
-    <string name="settings_view_category">View settings</string>
     <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_theme_title">Theme</string>
-    <string name="settings_cert_category">Certificates</string>
+    <string name="settings_cert_category">Manage certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
     <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
@@ -132,6 +130,7 @@
     <string name="shortcut_create_long">Create a new note</string>
 
     <!-- Key / Values for preferences -->
+    <string name="pref_key_certs" translatable="false">certificates</string>
     <string name="pref_key_trust_system_certs" translatable="false">trustSystemCerts</string>
     <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
     <string name="pref_key_note_mode" translatable="false">noteMode</string>
